--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <div>
         <img class="img-responsive"  src="images/topping.png">
     </div>
-
+    <script src="main.js"></script>
 </body>
 </html>
